Add  code for firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IMTCalculator">
         <activity
+            android:name=".stepscounter.ListActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.HelperActivity"
             android:exported="false" />
         <activity
