update layot for reading data from firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IMTCalculator">
         <activity
-            android:name=".ShowActivity"
+            android:name=".stepscounter.ShowActivity"
             android:exported="false" />
         <activity
             android:name=".stepscounter.ListActivity"
