--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
+    implementation'uk.co.barbuzz:beerprogressview:0.0.6'
 
 
 }
