--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,17 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.google.firebase:firebase-common-ktx:20.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
+    implementation'com.github.cjhandroid:WaveProgressBar:v1.0.0'
+    implementation 'com.yangpingapps:ypwaveview:1.0.4'
     implementation'uk.co.barbuzz:beerprogressview:0.0.6'
+
 
 
 }
