--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+        keyAlias 'IMT'
+            storeFile file('C:\\Users\\Meadowsd\\IMTCalcKey.jks')
+            keyPassword 'kokos080903'
+            storePassword 'kokos080903'
+        }
+    }
     compileSdk 32
 
     defaultConfig {
@@ -14,6 +22,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
